# TAAgent

./: .gitignore  README.md  pyproject.toml
.codebuddy/rules/: mcp-development.mdc  skills-guidelines.mdc
.codebuddy/skills/renderdoc-reverse-engineering/: SKILL.md
.codebuddy/skills/renderdoc-reverse-engineering/references/: control-hiss-fluid-analysis.md  control-hiss-innovations.md
.codebuddy/skills/ue-cli/: SKILL.md
.codebuddy/skills/ue-cli/references/: cli_commands.md  ue_python_api.md  (+1 more)
.codebuddy/skills/ue-coding-workflow/: SKILL.md
.codebuddy/skills/ue-niagara-workflow/: SKILL.md
config/: mcp_config.example.json
docs/examples/materials/: M_AudioMaterialMeter_ArtDoc.md  M_AudioMaterialMeter_TechDoc.md  M_Water_ArtDoc.md  M_Water_TechDoc.md
docs/project/: setup.md
docs/skills/project-setup/: renderdoc-mcp-update.md  skill.md  update-and-build.md
docs/skills/ue-development/: skill.md
mcps/unreal_render_mcp/: server.py
mcps/unreal_render_mcp/handlers/: material.py  texture.py
mcps/unreal_render_mcp/tools/: __init__.py  blueprint.py  material.py  mesh.py  niagara.py  texture.py
src/extension/: renderdoc_facade.py  request_handler.py  socket_server.py
src/extension/services/: __init__.py  action_service.py  capture_manager.py  pipeline_service.py  resource_service.py  search_service.py
src/extension/utils/: __init__.py  helpers.py  parsers.py  serializers.py
src/scripts/renderdoc/: install_extension.py
src/servers/renderdoc_mcp/: README.md  __init__.py
src/servers/unreal_render_mcp/: __init__.py  requirements.txt  server.py
(+74 files in other folders)
