[project]
name = "rendering-mcp"
version = "1.0.0"
description = "AI-orchestrated rendering workflow MCP servers for RenderDoc to UE material reconstruction"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
